Update to version 0.1.1
Cleaner interface, fixed search bar, and table displays more rows.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Cryptocurrency Market Prices",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A simple extension that shows the market prices of various Cryptocurrencies.",
   "icons": {
       "16": "icons/icon16.png",
@@ -19,8 +19,8 @@
   },
   "background": {
     "persistent": false,
-    "scripts": [ "js/jquery-3.2.1.min.js", "js/bootstrap.min.js", "js/popup.min.js" ]
+    "scripts": [ "js/popup.min.js" ]
   },
-  "content_security_policy": "script-src 'self' https://www.google-analytics.com https://ajax.googleapis.com https://fonts.googleapis.com https://api.coinmarketcap.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com https://ajax.googleapis.com https://fonts.googleapis.com https://maxcdn.bootstrapcdn.com https://api.coinmarketcap.com; object-src 'self'",
   "permissions": [ "alarms" ]
 }
